# particles

./: .gitignore  index.html  package-lock.json  package.json
particles-game/: Cargo.toml
particles-game/assets/: Particles_Atlas.psd
particles-game/src/: brush.rs  constants.rs  control.rs  lib.rs  main.rs  sprites.rs  universe.rs
particles-game/src/components/: mod.rs
particles-game/src/game/components/: mod.rs
src/: App.tsx  index.tsx
src/wasm-particles/: particles-game.js
src/webasm-particles/: particles-game.d.ts  particles-game_bg.wasm.d.ts
