[package]
name = "particles-game"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = "0.7.0"
rand = "0.8.5"
itertools = "0.10.3"
wasm-bindgen = "0.2.81"